# Compression-Handler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
cmake/: CompressionHandlerConfig.cmake.in
include/: CompressionHandler.h  FileHandler.h  GzipHandler.h  LocalFileHandler.h  XRootDHandler.h  ZstdHandler.h
inlcude/: CompressionHandler.h  EventIOHandler.h  EventIOWrapper.h  FileHandler.h  GzipHandler.h  LocalFileHandler.h  XRootDHandler.h  ZstdHandler.h
src/: CMakeLists.txt  CompressionHandler.cpp  EventIOHandler.cpp  EventIOWrapper.cpp  GzipHandler.cpp  XRootDFileHandler.cpp  ZstdHandler.cpp
test/: CMakeLists.txt  test_gzipfile.cpp  test_localfile.cpp  test_xrootdfile.cpp  test_zstdfile.cpp
